@@ -34,6 +34,12 @@
         = auto_complete_field 'tag_list', {:url => { :controller => "tags", :action => 'auto_complete_for_tag_name'}, :tokens => [','] }
         %label=:save_post_as.l
         = f.select(:published_as, [[:published.l, 'live'], [:draft.l, 'draft']])
+        
+        %label
+          = f.check_box :send_comment_notifications        
+          =:send_comment_notifications.l        
+
+        
         %p
           = submit_tag :update.l
           = :or.l
