@@ -85,6 +85,17 @@ class CommentTest < ActiveSupport::TestCase
     assert comment.reload.notify_by_email.eql?(false)
     assert first_comment.reload.notify_by_email.eql?(false)
   end
+  
+  def test_should_not_notify_of_comments_on_post_with_send_notifications_off
+    post = posts(:funny_post)
+    post.send_comment_notifications = false
+    post.save!
+
+    comment = Comment.create!(:comment => 'foo', :user => users(:aaron), :commentable => post)
+    assert_difference ActionMailer::Base.deliveries, :length, 0 do        
+      comment.send_notifications      
+    end
+  end
 
 
 end
