@@ -2,6 +2,7 @@
 
 =1.2.1
 * Anonymous forum replies
+* Turn comment notifications on or off by post
 
 =1.2.0
 * Threaded private messages
